--- a/Source/SmartHotel.Clients/SmartHotel.Clients.iOS/SmartHotel.Clients.iOS.csproj
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients.iOS/SmartHotel.Clients.iOS.csproj
@@ -201,6 +201,8 @@
     <ImageAsset Include="Resources\Media.xcassets\LaunchImages.launchimage\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
+    <BundleResource Include="Resources\ic_arrow_left_normal.png" />
+    <BundleResource Include="Resources\ic_arrow_right_normal.png" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
@@ -564,13 +566,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs">
-      <Version>7.0.4</Version>
+      <Version>8.1.0-alpha-0009</Version>
     </PackageReference>
     <PackageReference Include="Autofac">
       <Version>4.9.2</Version>
     </PackageReference>
     <PackageReference Include="CarouselView.FormsPlugin">
-      <Version>5.2.0</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microcharts">
       <Version>0.7.1</Version>
@@ -624,7 +626,7 @@
       <Version>2.4.5.880-pre</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>3.6.0.293080</Version>
+      <Version>5.0.0.2578</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.TestCloud.Agent">
       <Version>0.21.7</Version>
