--- a/Source/SmartHotel.Clients/SmartHotel.Clients/SmartHotel.Clients.csproj
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients/SmartHotel.Clients.csproj
@@ -4,8 +4,9 @@
     <AssetTargetFallback>$(AssetTargetFallback);portable-win+net45+wp8+win81+wpa8;portable-net45+win8</AssetTargetFallback>
     <AssemblyName>SmartHotel.Clients.Core</AssemblyName>
     <RootNamespace>SmartHotel.Clients.Core</RootNamespace>
-    <Configurations>Debug;Release;UI Test;UI-Test</Configurations>
+    <Configurations>UI Test;Debug;Release;UI-Test</Configurations>
     <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
+    <BuildWithMSBuildOnMono>true</BuildWithMSBuildOnMono>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='UI Test|AnyCPU'">
     <DefineConstants>TRACE;IS_UI_TEST;</DefineConstants>
@@ -17,9 +18,9 @@
     <EmbeddedResource Include="Resources\GreetingMessage.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Acr.UserDialogs" Version="7.0.4" />
+    <PackageReference Include="Acr.UserDialogs" Version="8.1.0-alpha-0009" />
     <PackageReference Include="Autofac" Version="4.9.2" />
-    <PackageReference Include="CarouselView.FormsPlugin" Version="5.2.0" />
+    <PackageReference Include="CarouselView.FormsPlugin" Version="6.0.0" />
     <PackageReference Include="Microcharts" Version="0.7.1-pre" />
     <PackageReference Include="Microcharts.Forms" Version="0.7.1-pre" />
     <PackageReference Include="Microcharts" Version="0.7.1" />
@@ -38,8 +39,8 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.5.880-pre" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.5.188" />
     <PackageReference Include="Xamanimation" Version="1.2.0" />
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
-    <PackageReference Include="Xamarin.Forms.Maps" Version="3.6.0.293080" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="5.0.0.2578" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Resources.Designer.cs">
