--- a/Source/SmartHotel.Clients/SmartHotel.Clients/SmartHotel.Clients.csproj
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients/SmartHotel.Clients.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Microcharts.Maui" Version="1.0.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.55.0" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
+    <PackageReference Include="FFImageLoadingCompat" Version="0.1.1" />
     <PackageReference Include="FFImageLoadingCompat.Maui" Version="0.1.1" />
     
     <PackageReference Include="AlohaKit.Animations" Version="1.0.0" />
