--- a/Source/SmartHotel.Clients/SmartHotel.Clients.iOS/SmartHotel.Clients.iOS.csproj
+++ b/Source/SmartHotel.Clients/SmartHotel.Clients.iOS/SmartHotel.Clients.iOS.csproj
@@ -13,13 +13,21 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
+  <PropertyGroup>
+    <EnableCodeSigning>true</EnableCodeSigning>
+    <CodesignRequireProvisioningProfile>true</CodesignRequireProvisioningProfile>
+    <DisableCodesignVerification>true</DisableCodesignVerification>
+</PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
+    <CreatePackage>false</CreatePackage>
+  </PropertyGroup>
   <ItemGroup>
     <ITunesArtwork Include="iTunesArtwork" />
     <ITunesArtwork Include="iTunesArtwork@2x" />
   </ItemGroup>
-  <ItemGroup>
+  <!-- <ItemGroup>
     <Reference Include="System.IO.Compression" />
-  </ItemGroup>
+  </ItemGroup> -->
   <ItemGroup>
     <ProjectReference Include="..\SmartHotel.Clients\SmartHotel.Clients.csproj" />
   </ItemGroup>
@@ -39,8 +47,8 @@
     <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="8.0.0-preview.7.8814" />
     <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
 
-    <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-    <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+    <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-nightly.9423" />
+    <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.0-nightly.9423" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-preview.6.23329.7" />
 
     <PackageReference Include="Microsoft.AppCenter" Version="5.0.2" />
@@ -53,9 +61,140 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
-</Project>
-
-<!-- IGNORE
+  <ItemGroup>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-57x57%401x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-57x57%401x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-76x76%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-76x76%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-29x29%401x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-29x29%401x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-60x60%401x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-60x60%401x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-Small-50x50%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-Small-50x50%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-40x40%401x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-40x40%401x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-76x76%403x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-76x76%403x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-72x72%401x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-72x72%401x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-20x20%401x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-20x20%401x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-83.5x83.5%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-83.5x83.5%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-20x20%403x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-20x20%403x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\ItunesArtwork%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\ItunesArtwork%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-20x20%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-20x20%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-29x29%403x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-29x29%403x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-40x40%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-40x40%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-72x72%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-72x72%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-60x60%403x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-60x60%403x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-Small-50x50%401x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-Small-50x50%401x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-60x60%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-60x60%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-57x57%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-57x57%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-76x76%401x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-76x76%401x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-40x40%403x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-40x40%403x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\AppIcons.appiconset\Icon-App-29x29%402x.png">
+      <Link>Assets.xcassets\AppIcons.appiconset\Icon-App-29x29%402x.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\LaunchImages.launchimage\LaunchImage-Portrait%402x~ipad_1536x2008.png">
+      <Link>Assets.xcassets\LaunchImages.launchimage\LaunchImage-Portrait%402x~ipad_1536x2008.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\LaunchImages.launchimage\LaunchImage-568h%402x~iphone_640x1136.png">
+      <Link>Assets.xcassets\LaunchImages.launchimage\LaunchImage-568h%402x~iphone_640x1136.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\LaunchImages.launchimage\LaunchImage-1242%403x~iphone6s-portrait_1242x2208.png">
+      <Link>Assets.xcassets\LaunchImages.launchimage\LaunchImage-1242%403x~iphone6s-portrait_1242x2208.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\LaunchImages.launchimage\LaunchImage-Landscape%402x~ipad_2048x1496.png">
+      <Link>Assets.xcassets\LaunchImages.launchimage\LaunchImage-Landscape%402x~ipad_2048x1496.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\LaunchImages.launchimage\LaunchImage-1242%403x~iphone6s-landscape_2208x1242.png">
+      <Link>Assets.xcassets\LaunchImages.launchimage\LaunchImage-1242%403x~iphone6s-landscape_2208x1242.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\LaunchImages.launchimage\LaunchImage-Landscape%402x~ipad_2048x1536.png">
+      <Link>Assets.xcassets\LaunchImages.launchimage\LaunchImage-Landscape%402x~ipad_2048x1536.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\LaunchImages.launchimage\LaunchImage-750%402x~iphone6-landscape_1334x750.png">
+      <Link>Assets.xcassets\LaunchImages.launchimage\LaunchImage-750%402x~iphone6-landscape_1334x750.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\LaunchImages.launchimage\LaunchImage-750%402x~iphone6-portrait_750x1334.png">
+      <Link>Assets.xcassets\LaunchImages.launchimage\LaunchImage-750%402x~iphone6-portrait_750x1334.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Assets.xcassets\LaunchImages.launchimage\LaunchImage-Portrait%402x~ipad_1536x2048.png">
+      <Link>Assets.xcassets\LaunchImages.launchimage\LaunchImage-Portrait%402x~ipad_1536x2048.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Resources\Media.xcassets\LaunchImages.launchimage\LaunchImage-568h%402x~iphone_640x1136.png">
+      <Link>Resources\Media.xcassets\LaunchImages.launchimage\LaunchImage-568h%402x~iphone_640x1136.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Resources\Media.xcassets\LaunchImages.launchimage\LaunchImage-Landscape%402x~ipad_2048x1536.png">
+      <Link>Resources\Media.xcassets\LaunchImages.launchimage\LaunchImage-Landscape%402x~ipad_2048x1536.png</Link>
+    </ImageAsset>
+    <ImageAsset Update="Resources\Media.xcassets\LaunchImages.launchimage\LaunchImage-Portrait%402x~ipad_1536x2048.png">
+      <Link>Resources\Media.xcassets\LaunchImages.launchimage\LaunchImage-Portrait%402x~ipad_1536x2048.png</Link>
+    </ImageAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\Default%402x.png">
+      <Link>Resources\Default%402x.png</Link>
+    </BundleResource>
+    <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\hero_image_room%403x.png">
+      <Link>Resources\hero_image_room%403x.png</Link>
+    </BundleResource>
+    <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\hero_image_room%402x.png">
+      <Link>Resources\hero_image_room%402x.png</Link>
+    </BundleResource>
+    <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\Default-736h%403x.png">
+      <Link>Resources\Default-736h%403x.png</Link>
+    </BundleResource>
+    <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\Default-568h%402x.png">
+      <Link>Resources\Default-568h%402x.png</Link>
+    </BundleResource>
+    <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\ic_card%403x.png">
+      <Link>Resources\ic_card%403x.png</Link>
+    </BundleResource>
+    <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\Default-667h%402x.png">
+      <Link>Resources\Default-667h%402x.png</Link>
+    </BundleResource>
+    <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\ic_card%402x.png">
+      <Link>Resources\ic_card%402x.png</Link>
+    </BundleResource>
+  </ItemGroup>
+</Project><!-- IGNORE
 <PackageReference Include="Microsoft.Identity.Client">
       <Version>4.55.0</Version>
     </PackageReference>
